--- a/firstcode/src/main/AndroidManifest.xml
+++ b/firstcode/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.hexcuse.first_code">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,6 +18,21 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <receiver android:name=".MyBroadCast.BootCompleteReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name=".MyBroadCast.MyBroadCast">
+            <intent-filter>
+                <action android:name="com.hexcuse.first_code.MyBroadCast"/>
+            </intent-filter>
+        </receiver>
+        
+        <service android:name=".MyService.MyService"/>
+
     </application>
 
 </manifest>
